chore: SHUB-4 add structure carperts for project
