# src/main/resources/openapi.yaml
@@ -113,6 +113,41 @@ paths:
           $ref: "#/components/responses/NotFound"
         "500":
           $ref: "#/components/responses/InternalServerError"
+  /sales/payment-type:
+    get:
+      tags:
+        - servicesales-controller
+      summary: Consult the list of paymentType(retrievePaymentType)
+      description: Lista de tipo de pago en una venta
+      operationId: retrievePaymentType
+      parameters:
+        - $ref: "#/components/parameters/unicaServiceId"
+        - $ref: "#/components/parameters/unicaApplication"
+        - $ref: "#/components/parameters/unicaPid"
+        - $ref: "#/components/parameters/unicaUser"
+        - $ref: "#/components/parameters/authorization"
+        - $ref: "#/components/parameters/filter"
+        - $ref: "#/components/parameters/sort"
+        - $ref: "#/components/parameters/limit"
+        - $ref: "#/components/parameters/offset"
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RetrievePaymentType'
+          headers:
+            UNICA-ServiceId:
+              $ref: "#/components/headers/UNICA-ServiceId"
+            UNICA-ServicePID:
+              $ref: "#/components/headers/UNICA-PID"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
 components:
   schemas:
     CreateSaleRequest:
@@ -130,6 +165,17 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/AditionalData'
+    ProductRequest:
+      type: object
+      properties:
+        productId:
+          type: integer
+          description: Id of product
+          example: 1
+        amount:
+          type: integer
+          description: Amount of product
+          example: 5
     RetrieveSalesHistoryResponse:
       type: object
       description: Retrieve Sales history Response
@@ -202,136 +248,28 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/AditionalData'
-    ProductRequest:
+    RetrievePaymentType:
       type: object
+      description: Retrieve SalesDetail Response
       properties:
-        productId:
-          type: integer
-          description: Id of product
-          example: 1
-        amount:
-          type: integer
-          description: Amount of product
-          example: 5
-    UpdateCategoryRequest:
-      type: object
-      properties:
-        categoryId:
-          type: integer
-          description: Code of the category
-          example: 1
-        description:
-          type: string
-          description: Description of the category
-          example: "Edit category"
-        status:
-          type: integer
-          description: State of the category in the system 1(inactive) 0(active)
-          example: 1
-        aditionalData:
+        paymentsType:
           type: array
           items:
-            $ref: '#/components/schemas/AditionalData'
-    RetrieveProductResponse:
-      type: object
-      description: Product Response
-      properties:
-        products:
-          type: array
-          items:
-            $ref: '#/components/schemas/ProductResponse'
+            $ref: '#/components/schemas/PaymentTypeResponse'
         metadata:
           $ref: '#/components/schemas/MetadataResponse'
-    ProductResponse:
+    PaymentTypeResponse:
       type: object
       properties:
         id:
           type: integer
-          description: "The unique code for the Product."
+          description: "Payment Type Id"
           example: 1
-        name:
+        description:
           type: string
-          description: "Description of the product."
-          example: "Memoria USB"
-        status:
-          type: integer
-          description: "Status of product."
-          example: 0
-        stock:
-          type: integer
-          description: "Stock of product."
-          example: 100
-        price:
-          type: number
-          description: "Price of product."
-          example: 19.99
-        categoryId:
-          type: integer
-          description: "The category id"
-          example: 1
-        categoryDescription:
-          type: string
-          description: "The description of category"
-          example: "Laptops"
+          description: "Payment Type Description"
+          example: "paypal"
         additionalData:
-          type: array
-          items:
-            $ref: '#/components/schemas/AditionalData'
-    CreateProductRequest:
-      type: object
-      properties:
-        description:
-          type: string
-          description: "Brand description."
-          example: "New product"
-        status:
-          type: integer
-          description: "Product Status 0(inactive) 1(active)"
-          example: 0
-        stock:
-          type: integer
-          description: "Stock of Product"
-          example: 100
-        price:
-          type: number
-          description: "Price of Product"
-          example: 19.99
-        categoryId:
-          type: integer
-          description: "Category of Product"
-          example: 4
-        aditionalData:
-          type: array
-          items:
-            $ref: '#/components/schemas/AditionalData'
-    UpdateProductRequest:
-      type: object
-      properties:
-        id:
-          type: integer
-          description: "Product Id"
-          example: 5
-        description:
-          type: string
-          description: "Product description."
-          example: "Edit product"
-        status:
-          type: integer
-          description: "Product Status 0(inactive) 1(active)"
-          example: 0
-        stock:
-          type: integer
-          description: "Stock of Product"
-          example: 100
-        price:
-          type: number
-          description: "Price of Product"
-          example: 19.99
-        categoryId:
-          type: integer
-          description: "Category of Product"
-          example: 4
-        aditionalData:
           type: array
           items:
             $ref: '#/components/schemas/AditionalData'
